plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.9'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'kr.codesqaud'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}



dependencies {
	implementation('org.springframework.boot:spring-boot-starter-mustache')
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation('org.projectlombok:lombok')
	annotationProcessor('org.projectlombok:lombok')
	testImplementation('org.projectlombok:lombok')
	testAnnotationProcessor('org.projectlombok:lombok')
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation group: 'com.h2database', name: 'h2', version: '2.0.206'
	runtimeOnly 'com.h2database:h2'
}



tasks.named('test') {
	useJUnitPlatform()
}
